# Win32PropSheet

./: .gitignore  CMakeLists.txt  README.md  Win32PropSheet.cpp  Win32PropSheet_res.rc  resource.h
